--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 body {
   font-family: "Righteous", cursive;
-  background: #486587;
-  color: #d1d9e1;
+  background: rgb(15, 110, 31);
+  color: #000;
 }
 
 #score {
@@ -13,7 +13,6 @@ body {
 }
 
 .container {
-  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,7 +54,7 @@ input {
 }
 
 .active {
-  color: #ff4418;
+  color: #d1d9e1;
 }
 
 #start,
