--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 
 body {
   font-family: "Righteous", cursive;
-  background: rgb(15, 110, 31);
-  color: #000;
+  background-color: rgb(4, 86, 119);
+  background-image: url('blue-background.jpg');
+  color: rgb(245, 245, 245);
 }
 
 #score {
@@ -35,6 +36,7 @@ input {
   outline: inherit;
   font: inherit;
   text-transform: uppercase;
+  color: rgb(245, 245, 245);
 }
 
 @media only screen and (max-width: 350px) {
@@ -54,7 +56,7 @@ input {
 }
 
 .active {
-  color: #d1d9e1;
+  color: #ebc000;
 }
 
 #start,
@@ -95,7 +97,7 @@ button {
   margin: -10px 12px;
 }
 
-.blue-btn:hover,
-.blue-btn:active {
-  color: #d1d9e1;
+.hovering-btn:hover,
+.hoverin-btn:active {
+  color: #ebc000;;
 }
